# dn-projs

_archived/CNC/: O9092.cnc
_archived/C_Cpp/: c_cpp.code-workspace
_archived/C_Cpp/DMuse/ReaperRemoteMMAP/: CMakeLists.txt  dll.h  dllmain.c  dllmain.c_
_archived/DPsyche/: DPsyche项目纲要.ipynb  tgam_eeg.py  try_1.py
_archived/DStroke/: 1.py
_archived/Julia/: julia.code-workspace
_archived/MATLAB/: A112.m  A112_1.asv  A112_1.m  M20220108_01.mlx  N3.m  N3_.m  N3_2.asv  N3_2.m  N3_202306.m  Newt3.asv  Newt3.m  Newt3_2.m  Newton.m  Untitled2.m  Untitled3.m  Untitled4.asv  Untitled4.m  Untitled5.m  test1.m  test2.m  test3.asv  test3.m  test4.m
_archived/Mathematica/: 未命名-1.wls
_archived/ansys/: ansys.code-workspace
a20_pydlearn/dcam1/: dcam_distr_server.py  dcam_distribution.py  dcam_tempo.py  dcam_timer.py
a20_pydlearn/dcam2/: dcam_distr.py  dcam_framework2.py
a20_pydlearn/dcam3/: dcam3.py  distr3.py
a20_pydlearn/dcam3a/: dcam3_core.py  dcam3_core_np.py  dcam3_dist.py  dcam3_dist_np.py  dcam3_doc.ipynb  dcam3_server.py  dcam3_tempo.py  dcam_distr_server.py
a20_pydlearn/dcam4/: core.py  dcam.py  monitor.py  yolo_monitor.py  yolo_train.py  yolo_train_prepare.py
a20_pydlearn/deprecated/: time_collection.txt
a22_resume/latex/: 1.html  t1.ps1
a22_resume/mind/: index.html
a22_resume/resume/: index.html  new_file.html  signup.html
a22_resume/resume2/: bottle1.py  index.html
a24_life_assist/1028_1_yolo/: server_yolo_old.py
a24_life_assist/202408/: DNet.tar  (+4 more)
a25_ai/: deepseek_sdk_try.py
algo/: a20230407_01.py  a20230407_02.py
music/: 第一次pd尝试.pd
(+348 files in other folders)
